# rel4-integral

./: .gitignore  CMakeLists.txt  Cargo.toml  FindreL4.cmake  Makefile  README.md  build.py  repo.sh  requirements.txt  rust-toolchain.toml  update.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/actions/env-setup/: action.yml
.github/workflows/: parse_linux_kit.py  push-to-discrete-repo.yaml  test.yaml  trigger-release.yaml
docs/: 使用Subrepo大小仓库同步开发reL4指南.md  组件化微内核文档.md
driver-collect/: .gitrepo  Cargo.toml
driver-collect/src/: lib.rs
install_test/: kernel.elf
kernel/: .gitrepo  Cargo.toml  build.rs  makefile
kernel/src/: compatibility.rs  config.rs  ffi.rs  lib.rs  main.rs  structures.rs  utils.rs
kernel/src/arch/aarch64/: boot.rs  c_traps.rs  exception.rs  fpu.rs  instruction.rs  mod.rs  pg.rs  platform.rs  smp.rs  vcpu.rs
kernel/src/arch/aarch64/arm_gic/: mod.rs
kernel/src/arch/aarch64/arm_gic/gic_v2/: gic_v2.rs  mod.rs
kernel/src/arch/riscv/: boot.rs  c_traps.rs  exception.rs  fpu.rs  linker.ld.in  mod.rs  platform.rs  smp.rs
kernel/src/boot/: interface.rs  mm.rs  mod.rs  root_server.rs  untyped.rs  utils.rs
kernel/src/interfaces_impl/: cspace.rs
kernel/src/interrupt/: handler.rs  mod.rs
kernel/src/kernel/: fastpath.rs
kernel/src/smp/: ipi.rs  lock.rs  mod.rs
kernel/src/syscall/: mod.rs  utils.rs
kernel/src/syscall/invocation/: invoke_cnode.rs  invoke_irq.rs  invoke_mmu_op.rs  invoke_sched.rs  invoke_tcb.rs  invoke_untyped.rs  mod.rs
kernel/src/syscall/invocation/decode/: decode_cnode_invocation.rs  decode_irq_invocation.rs  decode_sched_invocation.rs  decode_tcb_invocation.rs  decode_untyped_invocation.rs  mod.rs
kernel/src/syscall/invocation/decode/arch/: aarch64.rs  riscv64.rs
patches/: README.md  microkit.patch
rel4-arch/: Cargo.toml
rel4-arch/src/: basic.rs  lib.rs  macros.rs  regs.rs  tcb.rs
rel4-arch/src/aarch64/: config.rs  macros.rs  mod.rs  pagetable.rs  psci.rs  regs.rs  tcb.rs
rel4-arch/src/basic/: addr.rs  mod.rs  region.rs
rel4-arch/src/riscv64/: config.rs
rel4-utils/: Cargo.toml
rel4-utils/src/: aligned.rs  lib.rs  macros.rs  no_lock.rs
rel4_config/: Cargo.toml
rel4_config/cfg/platform/: qemu-arm-virt.yml  spike.yml
rel4_config/src/: generator.rs  lib.rs  template.rs  utils.rs
rel4_config/template/: platform_gen.rs
search/: search_index.json
sel4_common/: .gitrepo  Cargo.toml  build.rs
sel4_common/src/: ffi.rs  lib.rs  object.rs  sel4_config.rs  structures.rs  utils.rs
sel4_common/src/arch/: mod.rs
sel4_common/src/arch/aarch64/: arch_tcb.rs  config.rs  mod.rs  object.rs  smp.rs  timer.rs
sel4_common/src/arch/riscv64/: arch_tcb.rs  config.rs  message_info.rs  mod.rs  object.rs  smp.rs  timer.rs
sel4_common/src/platform/: qemu_arm_virt.rs  spike.rs
sel4_common/src/utils/: mod.rs  no_lock.rs
sel4_cspace/: .gitrepo  Cargo.toml
sel4_cspace/src/: cte.rs  lib.rs
sel4_cspace/src/arch/aarch64/: mod.rs
sel4_cspace/src/capability/: mod.rs  zombie.rs
sel4_ipc/: .gitrepo  Cargo.toml
sel4_ipc/src/: endpoint.rs  notification.rs  transfer.rs
sel4_task/: .gitrepo  Cargo.toml
sel4_task/src/: deps.rs  lib.rs  reply.rs  sched_context.rs  scheduler.rs  tcb.rs  tcb_queue.rs
sel4_vspace/: .gitrepo  Cargo.toml
sel4_vspace/src/: boot.rs  lib.rs  pagetable.rs  utils.rs
sel4_vspace/src/arch/aarch64/: asid.rs  boot.rs  device.rs  interface.rs  machine.rs  mod.rs  pte.rs  structures.rs  utils.rs
sel4_vspace/src/arch/riscv64/: asid.rs  boot.rs  device.rs  interface.rs  pagetable.rs  pte.rs  satp.rs  structures.rs  utils.rs
serial-frame/: .gitrepo
serial-impl/pl011/: .gitrepo
serial-impl/sbi/: .gitrepo
tools/: generator.py
xtask/: Cargo.toml
xtask/src/: cmake.rs  install.rs  kernel.rs  main.rs  run.rs
使用Subrepo大小仓库同步开发reL4指南/: index.html
组件化微内核文档/: index.html
