[package]
name = "driver-collect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial-frame = { git = "https://github.com/reL4team2/serial-frame.git", branch = "master" }
serial-impl-pl011 = { git = "https://github.com/reL4team2/serial-impl-pl011.git", branch = "master" }
serial-impl-sbi = { git = "https://github.com/reL4team2/serial-impl-sbi.git", branch = "master" }
cfg-if = "1.0.0"
