[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rel4_config = { path = "../rel4_config" }
duct = "1.1.1"
